--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,14 +16,17 @@
 <resources>
     <string name="app_name">Reply</string>
     <string name="navigation_drawer">Navigation Drawer</string>
+    <string name="navigation_back">Back</string>
     <string name="tab_inbox">Inbox</string>
-    <string name="tab_article">Articles</string>
-    <string name="tab_dm">Direct Messages</string>
-    <string name="tab_groups">Groups</string>
+    <string name="tab_sent">Sent</string>
+    <string name="tab_drafts">Drafts</string>
+    <string name="tab_spam">Spam</string>
+    <string name="logo">Logo</string>
 
     <string name="profile">Profile</string>
-    <string name="search">Search</string>
-    <string name="search_replies">search replies</string>
     <string name="reply">Reply</string>
     <string name="reply_all">Reply All</string>
+    <string name="continue_composing">Continue Composing</string>
+    <string name="delete">Delete</string>
+    <string name="move_to_inbox">Move to Inbox</string>
 </resources>
