Delete paris photos; Implement details page for sent, draft, spam
Change-Id: I2ec2b2182837131c53653ed2ca82051e6f2f8a0c

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="profile">Profile</string>
     <string name="reply">Reply</string>
     <string name="reply_all">Reply All</string>
+    <string name="continue_composing">Continue Composing</string>
+    <string name="delete">Delete</string>
+    <string name="move_to_inbox">Move to Inbox</string>
 </resources>
