--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
 <resources>
     <string name="app_name">Reply</string>
     <string name="navigation_drawer">Navigation Drawer</string>
+    <string name="navigation_back">Back</string>
     <string name="tab_inbox">Inbox</string>
     <string name="tab_sent">Sent</string>
     <string name="tab_drafts">Drafts</string>
