--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,10 +34,6 @@
     <string name="delete">Delete</string>
     <string name="move_to_inbox">Move to Inbox</string>
 
-    <string name="account_1_first_name">Jeff</string>
-    <string name="account_1_last_name">Hansen</string>
-    <string name="account_1_email">hikingfan@altostrat.com</string>
-
     <string name="account_4_first_name">Tracy</string>
     <string name="account_4_last_name">Alvarez</string>
     <string name="account_4_email">tracealvie@altostrat.com</string>
@@ -130,7 +126,7 @@
     <string name="email_4_time">2 hours ago</string>
 
     <string name="email_5_subject">Update to Your Itinerary</string>
-    <string name="email_5_body"></string>
+    <string name="email_5_body" />
     <string name="email_5_time">2 hours ago</string>
 
     <string name="email_6_subject">Recipe to try</string>
